@@ -1,5 +1,6 @@
 package com.webapp.storage;
 
+import com.webapp.exception.StorageException;
 import com.webapp.model.Resume;
 
 import java.util.Arrays;
@@ -17,25 +18,28 @@ public class SortedArrayStorage extends AbstractArrayStorage {
 
     @Override
     protected void insertElement(Resume resume, int index) {
-        int insertIdx = -index - 1;
-        System.arraycopy(storage, insertIdx, storage, insertIdx + 1, size - insertIdx);
-        storage[insertIdx] = resume;
+        if (index < 0) {
+            int insertIdx = -index - 1;
+            System.arraycopy(storage, insertIdx, storage, insertIdx + 1, size - insertIdx);
+            storage[insertIdx] = resume;
+        } else {
+            throw new StorageException("Resume already exists", resume.getUuid());
+        }
     }
 
     @Override
     protected void doUpdate(Resume resume, Integer searchKey) {
-
+        storage[searchKey] = resume;
     }
 
     @Override
     public Integer getSearchKey(String uuid) {
-        Resume searchKey = new Resume(uuid);
-        return Arrays.binarySearch(storage, 0, size, searchKey);
+        Resume searchKey = new Resume(uuid, "dummy");
+        return Arrays.binarySearch(storage, 0, size, searchKey, RESUME_COMPARATOR);
     }
 
     @Override
     protected List<Resume> doCopyAll() {
-        return List.of();
+        return Arrays.asList(Arrays.copyOf(storage, size));
     }
-
 }
